# aigen-image-detector

./: .gitignore  README.md  STATUS.md  pyproject.toml
docs/: concepts.md  design-decisions.md  ethics-faces.md  expts.md
docs/diagrams/: cross-generator.excalidraw  pipeline.excalidraw
reports/: cross_generator_biggan.md  cross_generator_midjourney.md  report.md  report_finetune.md
scripts/: cross_generator_experiment.py  get_data.py
src/aidetect/: __init__.py  app.py  config.py  data.py  engine.py  evaluate.py  explain.py  infer.py  metrics.py  model.py  train.py  util.py
tests/: test_data.py  test_evaluate.py  test_metrics.py  test_model.py
